1) fixed arrow icon missing from menu 2) fixed firefox's library window inactive buttons opacity :) 3) yeeted viewport file, added changes to  list file 4) changed menubar items padding 5) finally fixed scale and progressbar ;-; 6) fixed distorted circular buttons

--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -9,6 +9,9 @@ list {
     padding: config.$spacing-medium;
     &:hover,&:selected {
       background: colors.$accent-light;
+      colorswatch {
+        border: 0.2em solid colors.$white-strong;
+     }
     }
   }
 
