--- a/scss/gtk-3.0/widgets/_menu.scss
+++ b/scss/gtk-3.0/widgets/_menu.scss
@@ -20,4 +20,9 @@ menu {
       background: colors.$green-light;
     }
   }
+  arrow {
+    min-height: 1.5em;
+    min-width: 1.5em;
+    -gtk-icon-source: -gtk-recolor(url("../assets/svg/arrow-right.svg"));
+  }
 }
